--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input class="first-name" type="text" placeholder="First Name">
                 <p class="error-1"></p><br>
                 <label>Last Name</label><br>
-                <input class="last-name" type="text" placeholder="First Name">
+                <input class="last-name" type="text" placeholder="Last Name">
                 <p class="error-2"></p><br>
                 <label>Email</label><br>
                 <input class="email" type="email" placeholder="Email Address">
