--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Sign Up</title>
-</head>
-<body>
-    <div class="background">
-        <div class="content">
-            <h2 class="head">Sign Up</h2>
-            <div>
-                <label>First Name</label><br>
-                <input class="first-name" type="text" placeholder="First Name">
-                <p class="error-1"></p><br>
-                <label>Last Name</label><br>
-                <input class="last-name" type="text" placeholder="Last Name">
-                <p class="error-2"></p><br>
-                <label>Email</label><br>
-                <input class="email" type="email" placeholder="Email Address">
-                <p class="error-3"></p><br>
-                <label>Password</label><br>
-                <input class="password" type="password" placeholder="Password">
-                <p class="error-4"></p><br>
-                <label>Confirm Password</label><br>
-                <input class="confirm-password" type="password" placeholder="Confirm Password">
-                <p class="error-5"></p>
-            </div>
-            <button class="sign-up">Sign Up</button>
+  </head>
+  <body>
+    <div class="content">
+      <h2 class="head">Sign Up</h2>
+      <div class="content-container">
+        <div>
+          <label>First Name</label>
+          <input class="first-name" type="text" placeholder="First Name" />
+          <p class="error-1"></p>
         </div>
+        <div>
+          <label>Last Name</label>
+          <input class="last-name" type="text" placeholder="Last Name" />
+          <p class="error-2"></p>
+        </div>
+        <div>
+          <label>Email</label>
+          <input class="email" type="email" placeholder="Email Address" />
+          <p class="error-3"></p>
+        </div>
+        <div>
+          <label>Password</label>
+          <input class="password" type="password" placeholder="Password" />
+          <p class="error-4"></p>
+        </div>
+        <div>
+          <label>Confirm Password</label>
+          <input
+            class="confirm-password"
+            type="password"
+            placeholder="Confirm Password"
+          />
+          <p class="error-5"></p>
+        </div>
+      </div>
+      <button class="sign-up">Sign Up</button>
     </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
